<resources>
    <string name="app_name">My Application</string>
    <string name="dura_o_m_xima_1_30">Duração Máxima: 1:30</string>
    <string name="avalia_o">Avaliação:</string>
    <string name="data_m_nima_a_partir_de_1900">Data Mínima a partir de 1900:</string>
    <string name="insira_a_data_m_nima">Insira a Data Mínima</string>
    <string name="data_m_xima">Data Máxima:</string>
    <string name="insira_a_data_m_xima">Insira a Data Máxima</string>
    <string name="finalizar">Finalizar</string>
    <string name="pontua_o_imdb">Pontuação IMDb</string>
    <string name="cadastrar_filme">Cadastrar filme</string>
    <string name="criar_uma_conta">Criar uma conta</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar_um_filme">Cadastrar um filme</string>
    <string name="t_tulo">Título</string>
    <string name="g_nero">Gênero</string>
    <string name="classifica_o_indicativa">Classificação indicativa</string>
    <string name="imdb">IMDb</string>
    <string name="ano_de_lan_amento">Ano de lançamento</string>
    <string name="adicionar_filme">Adicionar filme</string>
    <string name="recomendador_de_filmes">Recomendador de filmes</string>
    <string name="e_mail">E-mail</string>
    <string name="senha_login">Senha</string>
    <string name="entrar_na_conta">Entrar na conta</string>
    <string name="n_o_possui_uma_conta_cadastre_se_aqui">Não possui uma conta? Cadastre-se aqui</string>
    <string name="fa_a_seu_cadastro">Faça seu cadastro!</string>
    <string name="nome">Nome</string>
    <string name="adms">ADMs</string>
    <string name="fa_a_seu_login">Faça seu login</string>
    <string name="precisando_de_um_uma_recomenda_o_temos_v_rias_para_voc">Precisando de um uma recomendação? Temos várias para você!</string>
    <string name="n_o_possui_conta_cadastre_se">Não possui conta? Cadastre-se</string>
    <string name="clique_em_um_g_nero">Clique em um Gênero!</string>
    <string name="filme">Filme</string>
    <string name="livro">Livro</string>
    <string name="s_rie_de_tv">Série de TV</string>
    <string name="anima_o">Animação</string>
    <string name="me_recomende_um_a">Me recomende um(a) ...</string>
    <string name="email_profile">email</string>
    <string name="nome_profile">nome</string>
    <string name="lembrar_da_conta">Lembrar da conta</string>
    <string name="sair_da_conta">Sair da conta</string>
</resources>
