<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15sp"
    tools:context=".RegisterMovies">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_um_filme"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30sp" >
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleLayout"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleField"
            android:hint="@string/t_tulo"
            android:layout_width="350sp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/genderField"
            android:hint="@string/g_nero"
            android:inputType="text"
            android:layout_width="350sp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/releaseField"
            android:hint="@string/ano_de_lan_amento"
            android:inputType="date"
            android:layout_width="350sp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ratingLayout"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7sp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ratingField"
            android:hint="@string/classifica_o_indicativa"
            android:inputType="number"
            android:layout_width="350sp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imdbLayout"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/imdbField"
            android:hint="@string/imdb"
            android:inputType="numberDecimal"
            android:layout_width="350sp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_filme"
        android:textSize="15sp" >

    </Button>

</LinearLayout>