<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#98C2E3"
    tools:context=".profileAndChooseActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_person_24"
        style=""
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"
        android:contentDescription="ProfilePic" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/nome_profile"
        android:width="250dp"
        android:height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_profile"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:width="250dp"
        android:height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded" />

    <Button
        android:id="@+id/logOut"
        android:text="@string/sair_da_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:text="@string/me_recomende_um_a"/>

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/selectMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="#fff"
            android:src="@drawable/baseline_movie_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filme"
            android:layout_below="@id/selectMovie"/>

        <ImageButton
            android:id="@+id/selectBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/selectMovie"
            android:background="#fff"
            android:src="@drawable/baseline_movie_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livro"
            android:layout_below="@id/selectBook"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/selectShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_margin="20dp"
            android:layout_below="@id/selectMovie"
            android:src="@drawable/baseline_movie_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_rie_de_tv"
            android:layout_below="@id/selectShow"/>

        <ImageButton
            android:id="@+id/selectCartoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectBook"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/selectShow"
            android:background="#fff"
            android:src="@drawable/baseline_movie_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anima_o"
            android:layout_below="@id/selectCartoon"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</LinearLayout>